# vnstock-hub

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  run-server
backend/: .env.example  README.md  alembic.ini  check_indices.py  install_vnstock_cli  main.py  pyproject.toml
backend/.vnstock_cli/: vnstock-installer.py  vnstock_cli.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_stock_daily_prices.py  20260119_1311_39aff0cdf14e_add_caching_columns.py  20260120_1713_1a5fe5192058_add_stock_indices.py  20260124_1427_9c7a3e4f5b2d_add_fund_navs.py  20260128_1507_03b7a32c91f5_add_exchange_to_stock_companies.py  20260129_1200_5f8c2c1a9d7b_add_users.py
backend/app/: main.py
backend/app/api/v1/: auth.py  funds.py  stocks.py  sync.py
backend/app/core/: circuit_breaker.py  config.py  deps.py  exceptions.py  logging_config.py  security.py
backend/app/db/: database.py  models.py
backend/app/services/: auth_service.py  sync_status.py  vnstock_service.py
backend/app/services/vnstock_service/: __init__.py  company.py  core.py  finance.py  funds.py  history.py  indices.py  models.py  stock_metadata.py  stocks.py  symbols.py
backend/tests/: conftest.py  test_index_sync.py  test_models.py  test_stocks_api.py  test_vn100_fetch.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: stockApi.ts
frontend/src/components/: SyncIndicator.tsx  TabNavigation.tsx
frontend/src/features/auth/: AuthWidget.tsx
frontend/src/features/dashboard/: AssetHoldingChart.tsx  (+17 more)
(+17 files in other folders)
